<resources>
    <string name="app_name">second-twitter</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="config_password">Config password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="hashtag">Hashtag</string>
    <string name="add">Add</string>
    <string name="post_text">Post text</string>
    <string name="post">Post</string>
    <string name="secure_question">secure question</string>
    <string name="answer">answer</string>
    <string name="normal_user">Normal</string>
    <string name="analyser_user">Analyser</string>
    <string name="admin_user">Admin</string>
    <string name="bio">bio</string>
</resources>
